# e-agents

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yml  env.template  pyproject.toml
.github/workflows/: ci.yml
docker/livekit/: livekit.yaml
docs/: agents.md  architecture.md  background-tasks.md  commands.md  infrastructure.md  sessions.md
src/e_agents/: main.py
src/e_agents/adapters/: stt.py  tts.py
src/e_agents/agents/: analyst.py  config.yaml  fact_checker.py  navigator.py  utils.py  web_searcher.py
src/e_agents/api/: deps.py  router.py
src/e_agents/cli/: join.py  main.py  sessions.py  token.py
src/e_agents/core/: settings.py
src/e_agents/models/: api.py
src/e_agents/operations/: audio.py
src/e_agents/sessions/: double_loop.py
src/e_agents/tasks/: executor.py  models.py  registry.py  status.py
src/e_template_agents/: __main__.py
src/e_template_agents/adapters/: stt.py  tts.py
src/e_template_agents/agents/: analyst.py  fact_checker.py  navigator.py  utils.py  web_searcher.py
src/e_template_agents/api/: deps.py  router.py
src/e_template_agents/cli/: __init__.py  join.py  sessions.py  token.py
src/e_template_agents/core/: logger.py  settings.py
src/e_template_agents/models/: agent.py
src/e_template_agents/operations/: audio.py
src/e_template_agents/sessions/: double_loop.py
src/e_template_agents/tasks/: executor.py  models.py  registry.py
src/e_template_agents/tools/: transfer.py
tests/integration/: conftest.py
tests/integration/adapters/: test_stt.py  test_tts.py
tests/unit/: conftest.py
tests/unit/sessions/: test_double_loop.py
